# fault_injection_checks_demo

./: .gitignore  Cargo.toml  README.md  addr2line.py  ci.py  fi_check.py  readme.md  script.ld  tvla_check.py
.cargo/: config.toml
.github/workflows/: main.yml
examples/: fi_test.rs
fault_hardened/: Cargo.toml
fault_hardened/src/: bool.rs  lib.rs
pin_verif/: Cargo.toml  build.rs
pin_verif/src/: lib.rs
rust_fi/: Cargo.toml
rust_fi/src/: lib.rs
src/: bool_protected.rs  lib.rs  qemu.rs  test_utils.rs
test_fi_macro/: Cargo.toml
test_fi_macro/src/: lib.rs
tvla/: .gitignore  Cargo.toml  build.rs
tvla/tvla_targets/: tvla_target_rustcrypto_aes.rs
