[package]
name = "pin_verif"
version = "0.1.0"
edition = "2021"

[features]
test_fi = []

[dependencies]
cortex-m-semihosting = "0.3.7"

[dev-dependencies]
testmacro = { git = "https://github.com/yhql/testmacro"}
test_fi_macro = { path = "test_fi_macro" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 's'
