[package]
name = "pin_verif"
version = "0.1.0"
edition = "2021"

[features]
test_fi = []

[dependencies]
cortex-m-semihosting = "0.3.7"
panic-semihosting = "0.6.0"
fault_hardened = { path = "../fault_hardened" }

[dev-dependencies]
embedded_test_harness = "0.1.1"
testmacro = { git = "https://github.com/yhql/testmacro" }
rust_fi = { path = "../rust_fi" }
